--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
 							<div class="display-tc animate-box " data-animate-effect="fadeIn">
 								<h1>Manu M &amp; Anupriya</h1>
 								<h2>We Are Getting Married</h2>
-								<div class="simply-countdown simply-countdown-one"></div>
 								<p><a href="#" class="btn btn-default btn-sm">Save the date 22-12-2019</a></p>
+								<div class="simply-countdown simply-countdown-one"></div>
+
 								<a href="#fh5co-couple"> <i class="fa fa-angle-double-down text animated bounce"
 										aria-hidden="true"></i></a>
 								<!-- <small>SCROLL DOWN</small> -->
@@ -139,7 +140,7 @@
 				<div class="couple-wrap animate-box">
 					<div class="couple-half">
 						<div class="groom">
-							<img src="images/hari-img.jpg" alt="groom" class="img-responsive">
+							<img src="images/maman.jpg" alt="groom" class="img-responsive">
 						</div>
 						<div class="desc-groom">
 							<h3>Manu M</h3>
@@ -164,7 +165,7 @@
 			</div>
 		</div>
 
-		<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/bann3.jpg);">
+		<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/bann6.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -194,7 +195,7 @@
 										<div class="row">
 											<div class="col-md-12">
 												<a href="#" class="thumbnail" style="overflow: hidden;">
-													<img src="images/mandpa01.jpg" alt="...">
+													<img src="images/temple2.jpg" alt="...">
 												</a>
 												<p><b>Address:</b></p>
 												<p>Thanayannattil Shiva temple<br>West Chalakudy<p>
@@ -229,7 +230,7 @@
 											<div class="col-md-12">
 												<a href="#" class="thumbnail"
 													style="overflow: hidden;background-color: #f1f0f0;">
-													<img src="images/mandpa02.jpg" alt="..."
+													<img src="images/hall.jpg" alt="..."
 														style="width: 100%;height: 246px;">
 												</a>
 												<p><b>Address:</b></p>
