--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Wedding &mdash; Manu & Anupriya</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Hari Prasad & Sandhya Sudhakar" />
-	<meta name="keywords" content="Hari Prasad & Sandhya Sudhakar" />
+	<meta name="description" content="Manu M & Anupriya" />
+	<meta name="keywords" content="Manu M & Anupriya" />
 	<meta name="author" content="" />
 
 
@@ -95,7 +95,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="#fh5co-couple">Invitation</a></li>
 							<li><a href="#fh5co-event">Events</a></li>
-							<!-- <li><a href="#fh5co-gallery">Gallery</a></li> -->
+							<li><a href="#fh5co-gallery">Gallery</a></li>
 							<li><a href="#fh5co-footer">Contact</a></li>
 						</ul>
 					</div>
@@ -105,7 +105,7 @@
 		</nav>
 
 		<header id="fh5co-header" class="fh5co-cover" role="banner"
-			style="background-image:url(images/mam_ban.jpg);background-position: center !important;"
+			style="background-image:url(images/mam_banner2.jpeg);background-position: center !important;"
 			data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
@@ -115,7 +115,7 @@
 							<div class="display-tc animate-box " data-animate-effect="fadeIn">
 								<h1>Manu M &amp; Anupriya</h1>
 								<h2>We Are Getting Married</h2>
-								<p><a href="#" class="btn btn-default btn-sm">Save the date 22-12-2019</a></p>
+								<p><button class=" savebtn">Save the date 22-12-2019 </button> </p>
 								<div class="simply-countdown simply-countdown-one"></div>
 
 								<a href="#fh5co-couple"> <i class="fa fa-angle-double-down text animated bounce"
@@ -133,7 +133,7 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 						<h2>You are invited</h2>
-						<h3>December 22 2019 Muhurtham @ 9.00 AM</h3>
+						<h3>December 22 2019 Muhurtham @ 8.30 AM</h3>
 						<p>We invite you to celebrate our wedding</p>
 					</div>
 				</div>
@@ -151,8 +151,8 @@
 					</div>
 					<p class="heart text-center"><i class="icon-heart2"></i></p>
 					<div class="couple-half">
-						<div class="bride">
-							<img src="images/sadhya-img.jpg" alt="groom" class="img-responsive">
+						<div class="bride ">
+							<img src="images/anupriya.jpeg" alt="groom" class="img-responsive">
 						</div>
 						<div class="desc-bride">
 							<h3>Anupriya</h3>
@@ -165,7 +165,7 @@
 			</div>
 		</div>
 
-		<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/bann6.jpg);">
+		<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/mam_banner1.jpeg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -195,7 +195,8 @@
 										<div class="row">
 											<div class="col-md-12">
 												<a href="#" class="thumbnail" style="overflow: hidden;">
-													<img src="images/temple2.jpg" alt="...">
+													<img src="images/temple2.jpg" alt="..."
+														style="width: 100%;height: 246px;">
 												</a>
 												<p><b>Address:</b></p>
 												<p>Thanayannattil Shiva temple<br>West Chalakudy<p>
@@ -254,6 +255,73 @@
 		</div>
 
 
+		<div id="fh5co-gallery" class="fh5co-section-gray">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+						<span>Our Memories</span>
+						<h2>Wedding Gallery</h2>
+
+					</div>
+				</div>
+				<div class="row row-bottom-padded-md">
+					<div class="col-md-12">
+						<div class="owl-carousel owl-theme">
+							<div class="item"><img src="images/hari-01.jpg">
+
+							</div>
+							<div class="item"><img src="images/0001_1.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_7.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_3.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_4.jpeg"></div>
+							<div class="item"><img src="images/SOUR1208-01.jpeg"></div>
+
+							<div class="item"><img src="images/0001_1.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_7.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_3.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_4.jpeg"></div>
+							<div class="item"><img src="images/SOUR1208-01.jpeg"></div>
+
+							<div class="item"><img src="images/0001_1.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_7.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_3.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_4.jpeg"></div>
+							<div class="item"><img src="images/SOUR1208-01.jpeg"></div>
+
+
+							<div class="item"><img src="images/0001_1.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_7.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_3.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_4.jpeg"></div>
+							<div class="item"><img src="images/SOUR1208-01.jpeg"></div>
+
+
+							<div class="item"><img src="images/0001_1.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_7.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_3.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_4.jpeg"></div>
+							<div class="item"><img src="images/SOUR1208-01.jpeg"></div>
+
+							<div class="item"><img src="images/0001_1.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_7.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_3.jpeg"></div>
+							<div class="item"><img src="images/gp_pic_4.jpeg"></div>
+							<div class="item"><img src="images/SOUR1208-01.jpeg"></div>
+
+
+
+
+
+
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
 
 
 
@@ -291,7 +359,7 @@
 			<div class="row copyright">
 				<div class="col-md-6">
 					<p>
-						<small class="block">&copy; Albin_Vp . All Rights Reserved.</small>
+						<small class="block">&copy; <b>Albin_Vp</b> . All Rights Reserved.</small>
 
 					</p>
 
